docs: answer the questions

--- a/man02_docs/T03_AME_Exercise2.tex
+++ b/man02_docs/T03_AME_Exercise2.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc} 
 \usepackage{fullpage}
 \usepackage{graphicx}
+\usepackage{todonotes}
 \usepackage[hidelinks]{hyperref,xcolor}
 \renewcommand\UrlFont{\color{blue}\rmfamily}
 
