--- a/man02_docs/T03_AME_Exercise2.tex
+++ b/man02_docs/T03_AME_Exercise2.tex
@@ -22,7 +22,7 @@
 \newcommand{\deliverableName}{}
 
 % Group names(s)
-\author{Dávid Szucs, Justus Liam Vetter}
+\author{Dávid Szűcs, Justus Liam Vetter}
 
 % Group number
 \newcommand{\groupNumber}{x}
