--- a/man02_docs/T03_AME_Exercise2.tex
+++ b/man02_docs/T03_AME_Exercise2.tex
@@ -46,8 +46,8 @@
 \tableofcontents
 
 \input{./chapters/exercise01.tex}
-\input{./chapters/exercise02.tex}
-\input{./chapters/exercise03.tex}
+%\input{./chapters/exercise02.tex}
+%\input{./chapters/exercise03.tex}
 
 
 
