final: final commit

--- a/man02_docs/T03_AME_Exercise2.tex
+++ b/man02_docs/T03_AME_Exercise2.tex
@@ -31,7 +31,7 @@
 \newcommand{\comments}{Comments for teachers of the course}
 
  % Web address for the project (if any)
-\newcommand{\homepage}{\url{https://www.ntnu.edu/studies/courses/IT3010}}
+\newcommand{\homepage}{\url{https://github.com/JustusVetter/Code-Mobile-and-Embedded-Applications/tree/man2}}
 
 % Date for title page, default is today and 
 \date{\today}
