--- a/man02_docs/title.tex
+++ b/man02_docs/title.tex
@@ -10,7 +10,7 @@
 	
 	\textsc{\Large \deliverableName}\\[0.5cm]
 	
-	\textsc{\large Cryptography and Information Security}\\[0.5cm]
+	\textsc{\large APLICACIONS MÒBILS I ENCASTADES (AME)}\\[0.5cm]
 	
 	%------------------------------------------------
 	%	Title
@@ -38,10 +38,10 @@
 		{\large\@date} % Date, change the \today to a set date if you want to be precise
     \vfill\vfill\vfill
 	
- %   \footnotesize{Comments: \comments}
-%   \vfill\vfill
-%    \homepage
-%    \vfill
+    \footnotesize{Comments: \comments}
+   \vfill\vfill
+    \homepage
+    \vfill
     
     %------------------------------------------------
     % Change log for the plan (can be deleted before delivery)
